@@ -2,6 +2,8 @@
 v6.2.9-git
 ----------
 
+[jan] Don't switch to regular compose view after an error in the redirection
+      view in basic mode.
 [jan] Fix cancelling redirection window in basic mode (Bug #14002).
 
 
